--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+spring.datasource.url=jdbc:mysql://localhost:3306/midterm?serverTimezone=UTC
+spring.datasource.username=raul
+spring.datasource.password=requehost
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+string.jpa.hibernate.ddl-auto=create-drop
+
+spring.jpa.show-sql=true
+spring.datasource.initialization-mode=always
+
 
