create-drop && debit corrected

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,6 @@ spring.datasource.username=raul
 spring.datasource.password=requehost
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-string.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create-drop
 
 spring.jpa.show-sql=true
-spring.datasource.initialization-mode=always
-
-
