--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<artifactId>midterm</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>midterm</name>
-	<description>Midterm project</description>
+	<description>Midterm projectt</description>
 
 	<properties>
 		<java.version>11</java.version>
