--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,5 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/midterm?serverTimezone=UTC
-spring.datasource.username=raul
-spring.datasource.password=requehost
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-
-spring.jpa.hibernate.ddl-auto=create-drop
-
-spring.jpa.show-sql=true
+server.port=8080
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:midterm
+spring.datasource.username=root
+spring.datasource.password=root
